<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Rice Clinix</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>


    <string name="save">روک تھام</string>
    <string name="definition">تعارف</string>


    <string name="bacterial_blight">Bacterial Blight</string>
    <string name="bacterial_blight_intro"> Xanthonias oryzae pv   Bacterial Blight کی وجہ سے ہوتی ہے۔ oryzae اس سے پودوں کی leaf پیلی اور پیلی خشک ہوجاتی ہے</string>

    <string name="bacterial_blight_save">مزاحم قسم کا پودا لگانا Bacterial Blight سے ہونے والے نقصان پر قابو پانے کا سب سے موثر ، قابل اعتماد ترین طریقہ ثابت ہوا ہے۔
بیماریوں پر قابو پانے کے دیگر اختیارات میں شامل ہیں:
 \u2022 متناسب مقدار میں پودوں کے غذائی اجزاء خصوصا نائٹروجن کا استعمال کریں۔
  \u2022 کھیتوں (روایتی طور پر سیلاب والی فصلوں میں) اور نرسریوں کی نکاسی کو یقینی بنائیں۔
  \u2022 کھیتوں کو صاف رکھیں۔ جڑی بوٹیوں کے میزبانوں کو نکالیں اور چاول کے بھوسے ، بھوسے ، چاولوں کے برسات اور رضاکارانہ انکر کے نیچے ہل چلا دیں ، جو Bacterial Blight کے میزبان کے طور پر کام کرسکتے ہیں۔
  \u2022 مٹی اور پودوں کے اوشیشوں میں بیماریوں کے ایجنٹوں کو دبانے کے لئے گرے ہوئے کھیتوں کو خشک ہونے دیں۔</string>


    <string name="bls">Bacterial Leaf Streak</string>
    <string name="bls_intro"> متاثرہ پودے بھوری اور پتے خشک ہوتے دکھاتے ہیں۔ سخت شرائط میں ، فوٹوسنتھیٹک علاقے کی کمی کی وجہ سے اس سے اناج کا وزن کم ہوسکتا ہے۔</string>

    <string name="bls_save">Bacterial Leaf Streak کو روکنے اور مؤثر طریقے سے سنبھالنے کے ::
 پلانٹ مزاحم قسمیں۔
 \u2022 بیج کا گرم پانی سے علاج کریں۔
 \u2022 کھیتوں کو صاف رکھیں we گندم کے میزبانوں کو نکالیں اور چاول کے بھوسے ، تنکے ، چاول برسات ، اور رضاکارانہ انکر کے نیچے ہل چلا دیں ، جو بیکٹیریا سے متاثر ہوسکتے ہیں۔
 \u2022 متناسب مقدار میں پودوں کے غذائی اجزاء خصوصا نائٹروجن کا استعمال کریں۔
 \u2022 کھیتوں (روایتی طور پر سیلاب والی فصلوں میں) اور نرسریوں کی نکاسی کو یقینی بنائیں۔
 \u2022 شدید سیلاب کے دوران کھیت کو نالیوں۔
 \u2022 مٹی اور پودوں کی باقیات میں موجود بیکٹیریا کو ہلاک کرنے کے لئے گرنے والے دور کے دوران کھیت کو خشک کردیں۔
\u2022 شدید انفیکشن کی صورت میں ، جب پیداوار متاثر ہوسکتی ہے تو ، تانبے پر مبنی فنگسائڈ سرخی میں لگائے جانے سے بیماری پر قابو پانے میں مؤثر ثابت ہوسکتی ہے۔</string>


    <string name="bakni">Bakanae</string>
    <string name="bakni_intro"> Bakanae بیجوں سے پیدا ہونے والی کوکیی بیماری ہے</string>

    <string name="bakni_save">\u2022  بیماری کی موجودگی کو کم سے کم کرنے کے لئے صاف بیجوں کا استعمال کریں
\u2022  ججب کے دوران ہلکے وزن ، متاثرہ بیجوں کو الگ کرنے کے لئے نمکین پانی کا استعمال کریں
\u2022  بیج کے علاج کے طور پر فنگسائڈس کا استعمال کریں</string>


    <string name="brown_spot">Brown Spot</string>
    <string name="brn_spot_intro">چاول کی سب سے عام اور نقصان دہ بیماری میں سے ایک کے طور پر بھوری رنگ کی جگہ کو تاریخی طور پر بڑے پیمانے پر نظرانداز کیا گیا ہے۔</string>

    <string name="brn_spot_save">\u2022 مٹی کی زرخیزی کو بہتر بنانا بھوری جگہ کا انتظام کرنے کا پہلا قدم ہے۔ یہ کرنے کے لیے:
\u2022 مٹی کے غذائی اجزاء کی باقاعدگی سے نگرانی کریں
\u2022 ضروری کھاد لگائیں
\u2022 ان مٹیوں کے لئے جو سلکان میں کم ہیں ، پودے لگانے سے پہلے کیلشیم سلیکیٹ سلیگ لگائیں.</string>


    <string name="fls_smut">False Smut</string>
    <string name="fls_smut_intro">False Smut اناج کی چکنی کا سبب بنتی ہے جس کی وجہ سے اناج کے وزن میں کمی واقع ہوتی ہے۔ یہ بیج کے انکرن کو بھی کم کرتا ہے۔</string>

    <string name="fls_smut_save">field کھیت صاف رکھیں۔
\u2022 فصل کاٹنے کے بعد متاثرہ بیج ، پینکال اور پودوں کا ملبہ ہٹا دیں۔
\u2022 کھیتوں کو مستقل طور پر سیلاب کرنے کے بجائے متبادل گیلا اور خشک (AWD) کے ذریعے نمی کی سطح کو کم کریں۔
\u2022 جہاں بھی ممکن ہو ، تحفظ کی کوشش کرو اور چاول کی مسلسل کٹائی کرو۔
\u2022 نائٹروجن کی معتدل شرحیں استعمال کریں۔
\u2022 مصدقہ بیج استعمال کریں۔
\u2022 مزاحمانہ اقسام کی اطلاع دی گئی ہے۔ دستیاب اقسام کی تازہ ترین فہرست کے ل your اپنے زراعت کے دفتر سے رابطہ کریں۔
</string>


    <string name="gras_st">Grassy Stunt</string>
    <string name="gras_st_intro">چاول کی گھاس والا اسٹنٹ وائرس پھل کی پیداوار میں رکاوٹ پیدا کرکے کم کرتا ہے۔</string>

    <string name="gra_st_save">چاول کے گھاس دار اسٹنٹ وائرس پر قابو پانے کے لئے براؤن پلانٹ شاپر ویکٹر کو سنبھالنے کی ضرورت ہے۔ یہ یا تو کیڑے مار ادویات ، بھوری پلانٹ ہاپپر مزاحم اقسام ، یا مطابقت پذیر فصل کا قیام کے ذریعہ کیا جاسکتا ہے۔ وائرس کے منبع کو کم کرنے کے ل Inf فصل کی کٹائی کے بعد متاثرہ کھال کو ہل چلایا جانا چاہئے۔</string>


    <string name="blast">Leaf and Collar Blast </string>
    <string name="blast_intro"> Blast فنگس میگنا پورٹ اوریزاے کی وجہ سے ہوا ہے۔ یہ چاول کے پودے کے تمام زمینی حص وں کو متاثر کرسکتا ہے: پتی ، کالر ، نوڈ ، گردن ، افراتفری کے کچھ حصے ، اور کبھی کبھی پتی کی میان۔</string>

    <string name="blast_save">Blast کے لئے بنیادی کنٹرول کا اختیار مزاحم قسمیں لگانا ہے۔ دستیاب اقسام کی تازہ ترین فہرستوں کے ل اپنے زراعت کے دفتر سے رابطہ کریں۔
 \u2022 فصلوں کے انتظام کے دیگر اقدامات بھی کیے جاسکتے ہیں ، جیسے:
\u2022 پودے لگانے کے وقت کو ایڈجسٹ کریں۔ بارش کے موسم کے آغاز کے بعد ، جب ممکن ہو تو ، بیجوں کی بو بونا۔
\u2022  دو یا زیادہ علاج میں نائٹروجن کھاد کی درخواست تقسیم کریں۔ کھاد کے زیادہ استعمال سے دھماکے کی شدت میں اضافہ ہوسکتا ہے۔</string>


    <string name="rg_stunt">Ragged Stunt</string>
    <string name="rg_stunt_intro">چاولوں سے Ragged اسٹنٹ وائرس جزوی طور پر زیادہ دقیانوسیوں ، بھرے ہوئے اناج اور پودوں کی کثافت میں کمی کی وجہ سے پیداوار کو کم کرتا ہے۔ براؤن پلانٹ ہاپپر کے ذریعہ یہ ویکٹر سے ایک پودے سے دوسرے پودوں میں پھیلتا ہے۔ متاثرہ پودوں کی پتیوں کی چک .ا پن نظر آتا ہے۔</string>

    <string name="rg_stunt_save">چاول کے Ragged اسٹنٹ وائرس کے خلاف روک تھام کے اقدامات براہ راست کنٹرول اقدامات سے زیادہ موثر ہیں۔ ایک بار وائرس سے متاثر ہونے کے بعد چاول کے پودے کو ٹھیک نہیں کیا جاسکتا۔
\u2022  پودوں کی قسمیں جو براؤن پودوں کے خلاف مزاحم ہیں۔
 \u2022 رگڈ اسٹنٹ مینجمنٹ کے لئے مزاحم قسموں کا استعمال کرنا ممکنہ طور پر کنٹرول کا سب سے اہم اقدام ہے۔ دستیاب اقسام کی تازہ ترین فہرستوں کے ل  اپنے زراعت کے دفتر سے رابطہ کریں۔
\u2022  ہم وقت سازی کے پودے لگانے کی مشق کریں۔
\u2022  وائرس کے منبع کو کم کرنے کے ل  فصل کے بعد متاثرہ ہٹی کو کھیت کے نیچے ہل چلا دیں۔</string>


    <string name="sht_blt">Sheath Blight</string>
    <string name="sht_blt_intro">Sheath Blight ایک کوکیی بیماری ہے جو ریزوکٹونیا سولانی کی وجہ سے ہے۔ متاثرہ پتے سینسس یا خشک ہوجاتے ہیں اور زیادہ تیزی سے مر جاتے ہیں ، نوجوان ٹیلرز کو بھی تباہ کیا جاسکتا ہے۔</string>

    <string name="sht_blt_save">اس وقت کاشت کے لئے چاول کی مزاحم قسم دستیاب نہیں ہے۔ میان دھندلاؤ کو کم سے کم کرنے کے لئے دستیاب مینجمنٹ کے اہم آپشنز میں شامل ہیں:
\u2022  فصل کے موسم کے مطابق ڈھلنے والی مناسب کھاد کا استعمال کریں۔
\u2022  فصل کا قیام (براہ راست بوائی یا پیوند کاری) کی معقول کثافت استعمال کریں۔
\u2022  ماتمی لباس پر احتیاط سے قابو رکھنا ، خاص طور پر لیوں پر۔
\u2022  فصلوں کے موسم میں چاول کے کھیتوں کو نسبتا  جلدی سے نالی کریں تاکہ میان دھبے کی وبا کو کم کریں۔
\u2022  بیجوں کے علاج کے لئے فنگسائڈ استعمال کریں۔
\u2022  بیجنگ کی شرح کو کم کرکے یا پودوں کی وسیع و عریض جگہ فراہم کرکے چھتری کے فن تعمیر کو بہتر بنائیں۔</string>
</resources>
