<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".DiseaseDetailScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diseaseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urdu"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="16sp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:text="@string/bacterial_blight"
                android:textColor="#304FFE"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urdu"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="16sp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:text="@string/definition"
                android:textColor="#D50000"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/diseaseIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urdu"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="16sp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:text="@string/bacterial_blight_intro"
                android:textColor="#000000"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urdu"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="16sp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:text="@string/save"
                android:textColor="#D50000"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/diseaseSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urdu"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="16sp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:text="@string/bacterial_blight_save"
                android:textColor="#038A3B"
                android:textSize="16sp" />




        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>